# rag-qt-stock

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Stock.cpp  Stock.h  Stock.ui  stockplugin.json
.github/workflows/: release.yml
plugins/: Bus.cpp  Bus.h  PluginInterface.h
